--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Mi contacto</h1>
-    <p>Privada Pino 339C</p>
-    <p>7555564302</p>
+    <p>xxxx 72 ST N 18</p>
+    <p>55 xxx xxxx</p>
     <p>alangibrancs@icloud.com</p>
 
     <hr>
